--- a/README
+++ b/README
@@ -1,8 +1,12 @@
-下载源码并解压
-将项目文件夹移动到 /var/www目录下
-在phpMyAdmin中导入sql文件夹下的vote.sql
-找到文件夹中的db_fns.php中第四行，将  root改为自己的数据库用户名， 123456改为自己的数据库密码  （以后改到配置文件中）
-浏览器访问 localhost:80/voting-system
-OK！ 
+# 简易投票系统
+
+-----------------------------
+# 部署
+
+- 下载源码并解压
+- 将项目文件夹移动到 /var/www目录下
+- 在phpMyAdmin中导入sql文件夹下的vote.sql
+- 找到文件夹中的db_fns.php中第四行，将  root改为自己的数据库用户名， 123456改为自己的数据库密码  （以后改到配置文件中）
+- 浏览器访问 localhost:80/voting-system OK！🍰 
 
 
